@@ -38,7 +38,7 @@ if (!hasProperty('excludeHotspotImpl')) {
     dependencies {
         runtimeOnly project(':hotspot-impl')
     }
-    extraJvmArgs += ['--add-opens', 'java.management/sun.management=ALL-UNNAMED']
+    extraJvmArgs += ['--add-exports', 'java.management/sun.management=ALL-UNNAMED']
 }
 
 if (!hasProperty('excludeClockImpl')) {
